--- a/Statistik_II_10_SS24.html
+++ b/Statistik_II_10_SS24.html
@@ -3,7 +3,7 @@
   <head>
     <title>Einheit 10</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Dr. Stephan Goerigk" />
+    <meta name="author" content="Prof. Dr. Stephan Goerigk" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/hygge.css" rel="stylesheet" />
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
@@ -27,9 +27,9 @@ name: Title slide
 class: middle, left
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 # Statistik II
-
-### Einheit 10: Verfahren für Nominaldaten
-##### 10.01.2023 | Prof. Dr. phil. Stephan Goerigk
+***
+### Einheit 10: Verfahren für Nominaldaten - `\(\chi-\)`Test
+##### 10.01.2024 | Prof. Dr. Stephan Goerigk
 
 ---
 class: top, left
