--- a/Statistik_II_1_SS24.html
+++ b/Statistik_II_1_SS24.html
@@ -28,7 +28,7 @@ class: middle, left
 # Statistik II
 ***
 ### Einheit 1: Einfaktorielle Varianzanalyse (1)
-##### 11.10.2023 | Prof. Dr. Stephan Goerigk
+##### 10.04.2024 | Prof. Dr. Stephan Goerigk
 
 ---
 class: top, left
@@ -96,67 +96,67 @@ class: top, left
 &lt;tbody&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 11.10.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10.04.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Einfaktorielle ANOVA (1) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 18.10.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 17.04.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Einfaktorielle ANOVA (2) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 25.10.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 24.04.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Einfache lineare Regression (1) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 08.11.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 08.05.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Einfache lineare Regression (2) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 5 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 15.11.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 15.05.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Mehrfaktorielle ANOVA &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 6 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 22.11.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 22.05.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Multiple Regression &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 7 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 06.12.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 05.06.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Regressionsmodelle mit Interaktionen &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 8 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 13.12.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 12.06.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; ANOVA mit Messwiederholung &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 9 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20.12.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 19.06.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Mixed Designs &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 10 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 10.01.2024 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 26.06.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Verfahren für Nominaldaten (1) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 11 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 17.01.2024 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 03.07.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Verfahren für Nominaldaten (2) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 12 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 24.01.2024 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10.07.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Robuste Tests &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:right;"&gt; 13 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 31.01.2024 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 17.07.2024 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Klausurvorbereitung &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
@@ -927,12 +927,12 @@ psych::describeBy(x = df[,c("Symptome", "Gruppe")], group = df$Gruppe)
 ##          vars  n  mean   sd median trimmed  mad  min   max range  skew kurtosis   se
 ## Symptome    1 50 11.59 3.62  11.61   11.58 3.01 1.76 19.75 17.99 -0.04     0.05 0.51
 ## Gruppe      2 50  1.00 0.00   1.00    1.00 0.00 1.00  1.00  0.00   NaN      NaN 0.00
-## ----------------------------------------------------------------------------------------------------------- 
+## ------------------------------------------------------------------------------------------------------------------------------------ 
 ## group: Medikament.2
 ##          vars  n  mean   sd median trimmed  mad  min  max range skew kurtosis   se
 ## Symptome    1 50 10.98 3.96  10.78   10.74 3.82 3.79 20.4 16.61 0.41    -0.38 0.56
 ## Gruppe      2 50  2.00 0.00   2.00    2.00 0.00 2.00  2.0  0.00  NaN      NaN 0.00
-## ----------------------------------------------------------------------------------------------------------- 
+## ------------------------------------------------------------------------------------------------------------------------------------ 
 ## group: Placebo
 ##          vars  n mean  sd median trimmed  mad   min   max range skew kurtosis   se
 ## Symptome    1 50 7.14 3.7   6.71    7.06 3.67 -0.87 15.68 16.54 0.16    -0.52 0.52
@@ -963,9 +963,9 @@ anova(lm(Symptome ~ Gruppe, data = df))
 ## Analysis of Variance Table
 ## 
 ## Response: Symptome
-##            Df Sum Sq Mean Sq F value        Pr(&gt;F)    
-## Gruppe      2  582.4 291.201  20.558 0.00000001341 ***
-## Residuals 147 2082.2  14.165                          
+##            Df Sum Sq Mean Sq F value    Pr(&gt;F)    
+## Gruppe      2  582.4 291.201  20.558 1.341e-08 ***
+## Residuals 147 2082.2  14.165                      
 ## ---
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 ```
