--- a/Statistik_II_2_SS24.html
+++ b/Statistik_II_2_SS24.html
@@ -29,7 +29,7 @@ class: middle, left
 # Statistik II
 ***
 ### Einheit 2: Einfaktorielle Varianzanalyse (2)
-##### 18.10.2023 | Prof. Dr. Stephan Goerigk
+##### 17.04.2024 | Prof. Dr. Stephan Goerigk
 
 ---
 class: top, left
@@ -100,7 +100,7 @@ t.test(Symptome ~ Gruppe,
 ## 	Two Sample t-test
 ## 
 ## data:  Symptome by Gruppe
-## t = 6.0718, df = 98, p-value = 0.00000002403
+## t = 6.0718, df = 98, p-value = 2.403e-08
 ## alternative hypothesis: true difference in means between group Medikament.1 and group Placebo is not equal to 0
 ## 95 percent confidence interval:
 ##  2.994253 5.901785
@@ -127,9 +127,9 @@ anova(lm(Symptome ~ Gruppe,
 ## Analysis of Variance Table
 ## 
 ## Response: Symptome
-##           Df  Sum Sq Mean Sq F value        Pr(&gt;F)    
-## Gruppe     1  494.62  494.62  36.867 0.00000002403 ***
-## Residuals 98 1314.82   13.42                          
+##           Df  Sum Sq Mean Sq F value    Pr(&gt;F)    
+## Gruppe     1  494.62  494.62  36.867 2.403e-08 ***
+## Residuals 98 1314.82   13.42                      
 ## ---
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 ```
@@ -193,9 +193,9 @@ anova(lm(Symptome ~ Gruppe, data = df))
 ## Analysis of Variance Table
 ## 
 ## Response: Symptome
-##            Df Sum Sq Mean Sq F value        Pr(&gt;F)    
-## Gruppe      2  582.4 291.201  20.558 0.00000001341 ***
-## Residuals 147 2082.2  14.165                          
+##            Df Sum Sq Mean Sq F value    Pr(&gt;F)    
+## Gruppe      2  582.4 291.201  20.558 1.341e-08 ***
+## Residuals 147 2082.2  14.165                      
 ## ---
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 ```
@@ -1354,7 +1354,7 @@ by(df$Symptome, df$Gruppe, shapiro.test)
 ## data:  dd[x, ]
 ## W = 0.99073, p-value = 0.9618
 ## 
-## ----------------------------------------------------------------------------------------------------------- 
+## ------------------------------------------------------------------------------------------------------------------------------------ 
 ## df$Gruppe: Medikament.2
 ## 
 ## 	Shapiro-Wilk normality test
@@ -1362,7 +1362,7 @@ by(df$Symptome, df$Gruppe, shapiro.test)
 ## data:  dd[x, ]
 ## W = 0.97211, p-value = 0.2814
 ## 
-## ----------------------------------------------------------------------------------------------------------- 
+## ------------------------------------------------------------------------------------------------------------------------------------ 
 ## df$Gruppe: Placebo
 ## 
 ## 	Shapiro-Wilk normality test
