--- a/Statistik_II_1_SS24.html
+++ b/Statistik_II_1_SS24.html
@@ -39,7 +39,7 @@ name: Contact Slide
 .pull-left[
 Prof. Dr. phil. Stephan Goerigk 
 
-Psychologische Methodenlehre
+Psychologische Methodenlehr
 
 Infanteriestraße 11a · 80797 München · 
 
@@ -963,9 +963,9 @@ anova(lm(Symptome ~ Gruppe, data = df))
 ## Analysis of Variance Table
 ## 
 ## Response: Symptome
-##            Df Sum Sq Mean Sq F value    Pr(&gt;F)    
-## Gruppe      2  582.4 291.201  20.558 1.341e-08 ***
-## Residuals 147 2082.2  14.165                      
+##            Df Sum Sq Mean Sq F value        Pr(&gt;F)    
+## Gruppe      2  582.4 291.201  20.558 0.00000001341 ***
+## Residuals 147 2082.2  14.165                          
 ## ---
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 ```
