--- a/Statistik_II_1_SS24.html
+++ b/Statistik_II_1_SS24.html
@@ -39,7 +39,7 @@ name: Contact Slide
 .pull-left[
 Prof. Dr. phil. Stephan Goerigk 
 
-Psychologische Methodenlehr
+Psychologische Methodenlehre
 
 Infanteriestraße 11a · 80797 München · 
 
